# tree-sitter-cds

./: .editorconfig  .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  REUSE.toml  binding.gyp  eslint.config.js  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: CODEOWNERS  renovate.json
.github/workflows/: conventional-commits.yml  release-npm.yml  tests.yml
.reuse/: dep5
bindings/c/: tree-sitter-cds.h  tree-sitter-cds.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cds/: __init__.py  binding.c
bindings/rust/: README.md  lib.rs
bindings/swift/TreeSitterCdsTests/: TreeSitterCdsTests.swift
docs/: README.md  cds-compiler-differences.md  development.md  neovim-support.md
docs/examples/node-bindings/: index.js
examples/: actions.cds  entity.cds
nvim/: Ubuntu.Dockerfile  highlights.scm  init.lua  locals.scm  setup-nvim-treesitter.sh
queries/: highlights.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
stack-graphs/: README.md  cds.tsg  stack-graph-example.cds
test/bindings/node/: index.js  package-lock.json  package.json
test/corpus/: actions.txt  ambiguity.txt  annotation_definitions.txt  annotations.txt  aspect.txt  conditions.txt  context.txt  entity.txt  event.txt  expressions.txt  extensions.txt  foreign_keys.txt  identifiers.txt  mixins.txt  namespace.txt  projections.txt  queries.txt  service.txt  types.txt  using.txt
tools/: Dockerfile  README.md  set_version.mjs
tools/checks/: run_shellcheck.sh  test_all.sh  test_queries.sh
tools/etc/: git-default-commit-message.txt
