[package]
name = "tree-sitter-cds"
description = "CAP CDS grammar for the tree-sitter parsing library"
version = "0.0.2"
authors = [ "Andre Meyering <andre.meyering@sap.com>" ]
license = "Apache-2.0"
keywords = ["incremental", "parsing", "cds"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/cap-js-community/tree-sitter-cds"
edition = "2021"
autoexamples = false
readme = "bindings/rust/README.md"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.22.5"

[build-dependencies]
cc = "1.0"
